# PhotoPrune

./: .dockerignore  .env.example  .gitignore  .lefthook.yml  AGENTS.md  AGENT_RULES.md  DECISIONS.md  Makefile  PHASE1_REPORT.md  README.md  RISK_REGISTER.md  ROADMAP.md  dev-env.cmd  docker-compose.dev.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  temp_pyvenv_dump.txt  turbo.json
.agent/prompts/: builder.md  planner.md  reviewer.md  task-discovery.md  verifier.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-runs.yml  dependabot-manual.yml  dependabot-scheduled.yml  dependabot-trigger.yml  python-dependency-refresh.yml  python-lock-repair.yml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: deferred-work.md  spec-pp-001-verify-fix-visible-home-navigation-and-profile-account-affordances.md  spec-pp-002-add-or-confirm-mvp-playwright-smoke-test.md  spec-pp-003-run-full-repo-verification-gate-and-reconcile-failures.md  (+12 more)
apps/worker/: coverage.json  coverage.xml  pyproject.toml
apps/worker/app/: celery_app.py  tasks.py
apps/worker/tests/: test_celery_app.py  test_tasks.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  frontend-design-implementation-note.md  frontend-design-implementation-notes.md  trust-copy.md
scripts/: block-sensitive-paths.sh  check-coverage.mjs  check-deployment-boundary.mjs  check-pnpm-release-age.mjs  check-python-lock-pins.py  fixture_media_server.py  prepare-lefthook.cjs  run-pnpm.sh  sync-python-locks.sh
tools/: picker-harness.html
(+192 files in other folders)
