[project]
name = "photoprune-worker"
version = "0.0.0"
description = "PhotoPrune Celery worker skeleton"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4.0",
    "redis>=5.0.8",
    "python-dotenv>=1.2.2"
]

[dependency-groups]
dev = [
    "ruff==0.15.17",
    "black==26.5.1",
    "mypy==1.20.2",
    "pytest==9.1.0",
    "pytest-cov==5.0.0",
    "pip>=26.1.2",
    "pip-audit==2.10.1",
    "urllib3>=2.7.0",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=xml --cov-report=term"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
